# AlgorithmsAndDataStructures

./: .gitignore  .gitmodules  AlgorithmsAndDataStructures.sln  CMakeLists.txt  README.md
2/Lab_06_C/: Matrix.s  MatrixIO.s  main.s
2/New folder/: CMakeLists.txt
Alg_03/: Alg_03_Prekel.docx  Alg_03_Prekel.json
Alg_03/Alg_03.Console/: Alg_03.Console.csproj  Program.cs
Alg_03/Alg_03.Core/: AbstractSort.cs  Class1.cs  InclusionSort.cs  SelectionSort.cs
Alg_03/Alg_03.Core.Tests/: CaseSourceSortTests.cs  TheoryGenericSortTests.cs
Alg_03/Alg_03.Tests/: Alg_03.Tests.csproj  CaseSourceSortTests.cs  TestFixture1.cs  TheoryGenericSortTests.cs  UnitTest1.cs
Alg_04/: Alg_04.sln  Alg_04_Prekel.docx
Alg_04/Alg_04.Console/: Alg_04.Console.csproj  Program.cs
Alg_04/Alg_04.Core/: AbstractSort.cs  Class1.cs  FastSort.cs  ShakerSort.cs
Alg_04/Alg_04.Core.Tests/: Alg_04.Core.Tests.csproj  TheoryGenericSortTests.cs  UnitTest1.cs
Alg_05/: Alg_05.sln  Alg_05_Prekel.docx
Alg_05/Alg_05.Console/: Alg_05.Console.csproj  Program.cs
Alg_05/Alg_05.Core/: Class1.cs  MergeSort.cs  MergeSortFileHelper.cs  Merger.cs  Splitter.cs
Alg_05/Alg_05.Core.Tests/: Alg_05.Core.Tests.csproj  MergeSortFileHelperTests.cs  MergeSortTests.cs  MergerTests.cs  SplitterMergerTests.cs  SplitterTests.cs  UnitTest1.cs
Alg_06/: Alg_06.sln  Alg_06_Prekel.docx
Alg_06/Alg_06.Console/: Alg_06.Console.csproj  Program.cs
Alg_06/Alg_06.Core/: Edge.cs  Edges.cs  Graph.cs  Vertex.cs  Vertices.cs
Alg_06/Alg_06.Core.Tests/: Alg_06.Core.Tests.csproj  GraphTests.cs  UnitTest1.cs
Alg_07/: Alg_07.sln  Alg_07_Prekel.docx
Alg_07/Alg_07.Console/: Alg_07.Console.csproj  Program.cs
Alg_08/: Alg_08.sln  Alg_08_Prekel.docx
Lab_01/: BoyerMoore.cpp  BoyerMoore.h  CMakeLists.txt  Lab_01_Prekel.docx
Lab_01/Lab_01_LibTests/: BoyerMooreTests.cpp  CMakeLists.txt
Lab_02/: Alg_02_Prekel.docx  Alg_02_Prekel.json  CMakeLists.txt  Lib.c  alg.docx  alg.json
Lab_02/Lab_02_Console/: CMakeLists.txt  main.c
Lab_02/Lab_02_LibTests/: CMakeLists.txt  Tests.c  Tests.h  main.c
(+29 files in other folders)
